build/log/idf_py_stderr_output_182223
In file included from /home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:8:
/home/vicenterey/esp/idf/esp-idf/components/driver/deprecated/driver/mcpwm.h:15:2: warning: #warning "legacy MCPWM driver is deprecated, please migrate to the new driver (include driver/mcpwm_prelude.h)" [-Wcpp]
   15 | #warning "legacy MCPWM driver is deprecated, please migrate to the new driver (include driver/mcpwm_prelude.h)"
      |  ^~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc: In function 'void RespondToDetection(float)':
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:117:45: error: expected ';' before 'gpio_set_level'
  117 |         vTaskDelay(100 / portTICK_PERIOD_MS)
      |                                             ^
      |                                             ;
  118 |         gpio_set_level(LED_GPIO_PIN, 0);
      |         ~~~~~~~~~~~~~~                       
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:124:45: error: expected ';' before 'gpio_set_level'
  124 |         vTaskDelay(100 / portTICK_PERIOD_MS)
      |                                             ^
      |                                             ;
  125 |         gpio_set_level(LED_GPIO_PIN, 0);
      |         ~~~~~~~~~~~~~~                       
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:126:45: error: expected ';' before 'gpio_set_level'
  126 |         vTaskDelay(100 / portTICK_PERIOD_MS)
      |                                             ^
      |                                             ;
  127 |         gpio_set_level(LED_GPIO_PIN, 1);
      |         ~~~~~~~~~~~~~~                       
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:128:45: error: expected ';' before 'gpio_set_level'
  128 |         vTaskDelay(100 / portTICK_PERIOD_MS)
      |                                             ^
      |                                             ;
  129 |         gpio_set_level(LED_GPIO_PIN, 0);
      |         ~~~~~~~~~~~~~~                       
make[3]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/detection_responder.cc.obj] Error 1
make[2]: *** [CMakeFiles/Makefile2:5675: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:2437: CMakeFiles/flash.dir/rule] Error 2
make: *** [Makefile:299: flash] Error 2
